fix: extra margin in the layout of the example

--- a/example/src/styles/globals.css
+++ b/example/src/styles/globals.css
@@ -1,4 +1,8 @@
-main div {
-  width: 100vw;
+body {
+  margin: 0;
+}
+
+main > div {
+  width: 100%;
   height: 100vh;
 }
